# goal

./: .aider.chat.history.md  .aider.input.history  .gitignore  CHANGELOG.md  Makefile  README.md  REFACTOR_PLAN.md  SUMD.md  SUMR.json  SUMR.md  TODO.md  Taskfile.yml  app.doql.css  app.doql.less  debug_recovery.py  goal.yaml  index.html  local.dev.txt  planfile.yaml  prefact.yaml  project.sh  pyproject.toml  pyqual.yaml  redsl.yaml  redsl_refactor_plan.md  redsl_refactor_plan.toon.yaml  redsl_refactor_report.md  redsl_refactor_report.toon.yaml  regix.yaml  sumd.json  test_large_file_auto.py  test_path_extraction.py  test_recovery.py  tree.txt  wup.yaml
.aider/: analytics.json  installs.json
.planfile/: config.yaml  config.yaml.fast.json
.redsl/: history.jsonl
.taskill/: state.json
TODO/: chciałby uruchamiać unit tetsy i inne z pytest, it.md  stworz liste projektow github i pypi, ktore przyś.md  zaproponuj refaktoryzacje, aby ta paczka goal potr.md
docs/: README.md  ci-cd.md  commands.md  configuration.md  enhanced-summary.md  examples.md  faq.md  hooks.md  installation.md  integration-guide.md  markdown-output-guide.md  markdown-output.md  pyqual.md  quickstart.md  registries.md  strategies.md  troubleshooting.md  usage.md  user-config.md
examples/my-new-project/: goal.yaml  local.dev.txt  pyproject.toml
examples/my-new-project/src/my-new-project/: __init__.py
goal/: __init__.py  __main__.py  changelog.py  cli.py  cli_helpers.py  commit_generator.py  commit_generator.py.bak  config.py  deep_analyzer.py  deep_analyzer_aggregate.py  deep_analyzer_patterns.py  (+12 more)
(+222 files in other folders)
